courseProject/manifests/todoApp/todoapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      volumes:
        - name: image
          persistentVolumeClaim:
            claimName: todoapp-pvc
      containers:
        - name: todoapp
          image: todoApp
          imagePullPolicy: Always
          volumeMounts:
            - name: image
              mountPath: /usr/src/app/images
